// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskLevel Renders elevated risk correctly. 1`] = `
<div>
  <span
    class="woocommerce-pill css-1qmnemh-Text e15wbhsk0"
  >
    Elevated
  </span>
</div>
`;

exports[`RiskLevel Renders highest risk correctly. 1`] = `
<div>
  <span
    class="woocommerce-pill css-1qmnemh-Text e15wbhsk0"
  >
    Highest
  </span>
</div>
`;

exports[`RiskLevel Renders normal risk correctly. 1`] = `
<div>
  <span
    class="woocommerce-pill css-1qmnemh-Text e15wbhsk0"
  >
    Normal
  </span>
</div>
`;

exports[`RiskLevel Renders not assessed risk correctly. 1`] = `
<div>
  <span
    class="woocommerce-pill css-1qmnemh-Text e15wbhsk0"
  >
    N/A
  </span>
</div>
`;
